--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:series": "node dist/series/server/server.mjs"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -18,17 +17,12 @@
     "@angular/forms": "^18.2.0",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
-    "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
-    "@angular/ssr": "^18.2.12",
     "@fortawesome/fontawesome-free": "^6.7.2",
-    "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@supabase/supabase-js": "^2.47.10",
-    "bootstrap": "^5.3.3",
-    "express": "^4.18.2",
+    "bootstrap": "^5.3.7",
     "ngx-spinner": "^17.0.0",
     "rxjs": "^7.8.1",
-    "series": "file:",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
@@ -36,10 +30,7 @@
     "@angular-devkit/build-angular": "^18.2.12",
     "@angular/cli": "^18.2.20",
     "@angular/compiler-cli": "^18.2.0",
-    "@types/bootstrap": "^5.2.10",
-    "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
